# valiss-py

./: .gitignore  AGENTS.md  README.md  pyproject.toml
.github/workflows/: release.yaml  test.yaml
examples/: grpc_webhook.py  http_server.py  issue_user.py  webhook.py
src/valiss/: __init__.py  _msgtransport.py  _requests.py  creds.py  errors.py  grpcauth.py  httpauth.py  message.py  nkeys.py  token.py
src/valiss/grpcsig/: __init__.py  _client.py  interceptor.py  payload.py
src/valiss/httpauth/: __init__.py  _client.py  _server.py  asgi.py  django.py  extension.py
src/valiss/httpsig/: __init__.py  _client.py  _core.py  asgi.py  django.py
tests/: test_conformance.py  test_creds.py  test_grpcauth.py  test_grpcsig.py  test_hardening.py  test_httpauth.py  test_httpauth_middleware.py  test_httpsig.py  test_interop.py  test_message.py  test_nkeys.py  test_token.py
tests/interop/: go.mod  go.sum  interop  main.go
tests/vectors/: README.md
