[project]
name = "valiss"
version = "0.4.0"
description = "Client library for valiss tenant authentication: nkey-signed HTTP and gRPC requests (wire spec 1)"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Mikhail Lukianchenko" }]
requires-python = ">=3.11"
dependencies = ["cryptography>=42"]

[project.urls]
Repository = "https://github.com/valiss-dev/valiss-py"
Upstream = "https://github.com/valiss-dev/valiss-go"
Spec = "https://github.com/valiss-dev/spec"

[project.optional-dependencies]
grpc = ["grpcio>=1.60"]
httpx = ["httpx>=0.27"]

[dependency-groups]
dev = [
    "pytest>=8",
    "grpcio>=1.60",
    "grpcio-health-checking>=1.60",
    "httpx>=0.27",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/valiss"]

[tool.pytest.ini_options]
testpaths = ["tests"]
