[project]
name = "valiss"
version = "0.8.0"
description = "valiss tenant authentication: nkey-signed HTTP and gRPC requests with server-side verification (wire spec 1)"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Mikhail Lukianchenko" }]
requires-python = ">=3.11"
dependencies = ["cryptography>=42"]

[project.urls]
Repository = "https://github.com/valiss-dev/valiss-py"
Upstream = "https://github.com/valiss-dev/valiss-go"
Spec = "https://github.com/valiss-dev/spec"

[project.optional-dependencies]
grpc = ["grpcio>=1.60"]
grpcsig = ["grpcio>=1.60", "protobuf>=4.25"]
httpx = ["httpx>=0.27"]
requests = ["requests>=2.31"]
django = ["django>=4.2"]
fastapi = ["starlette>=0.37"]

[dependency-groups]
dev = [
    "pytest>=8",
    "grpcio>=1.60",
    "grpcio-health-checking>=1.60",
    "protobuf>=4.25",
    "httpx>=0.27",
    "requests>=2.31",
    "django>=4.2",
    "starlette>=0.37",
    "fastapi>=0.110",
    "pyright>=1.1.390",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/valiss"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.pyright]
include = ["src/valiss"]
# The pure core — token, message, creds, nkeys, errors, verifier, allowlist,
# replay, keyring, chain — is type-checked, and the pure transport logic
# (httpauth.extension / httpauth._server) opts into strict via a
# `# pyright: strict` file header. Excluded: the import-guarded
# httpx/requests/grpc client shims (redeclaration pattern predates the gate) and the
# framework-coupled adapters, whose correctness rests on Django/Starlette/grpc
# stubs we do not pin.
exclude = [
    "src/valiss/httpauth/_client.py",
    "src/valiss/httpauth/django.py",
    "src/valiss/httpauth/asgi.py",
    "src/valiss/grpcauth/_client.py",
    "src/valiss/grpcauth/interceptor.py",
    "src/valiss/httpsig/_client.py",
    "src/valiss/httpsig/django.py",
    "src/valiss/httpsig/asgi.py",
    "src/valiss/grpcsig/_client.py",
    "src/valiss/grpcsig/interceptor.py",
]
pythonVersion = "3.11"
typeCheckingMode = "standard"
